--- a/Project.ipynb
+++ b/Project.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)"
+    "![cars.png](attachment:image.png)"
    ]
   },
   {
